dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)
AC_INIT(dvgrab.cc)
AM_INIT_AUTOMAKE(dvgrab, 1.5)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(stdio.h)

dnl Checks for libraries.
AC_ARG_WITH(libraw-includes, [  --with-libraw-includes=PATH  Path where libraw1394 headers are installed],
[
        if test x"$withval" != x"no" -a x"$withval" != x"yes"; then
                CPPFLAGS="-I$withval $CPPFLAGS"
        fi
])
AC_ARG_WITH(libraw-libs, [  --with-libraw-libs=PATH      Path where libraw1394 library is installed],
[
        if test x"$withval" != x"no" -a x"$withval" != x"yes"; then
                LDFLAGS="-L$withval $LDFLAGS"
        fi
])
AC_CHECK_LIB(raw1394, raw1394_new_handle,,
[
	AC_ERROR(You need libraw1394 0.9 or later to run dvgrab)
])

CPPFLAGS="$CPPFLAGS ` sdl-config --cflags`"
LDFLAGS="$LDFLAGS ` sdl-config --libs`"

# LIBAVC1394
AC_CHECK_HEADER([libavc1394/avc1394.h], ,
	[AC_MSG_ERROR([avc1394.h not found, install libavc1394-devel])
])
AC_CHECK_LIB(avc1394, avc1394_vcr_stop, ,
	[AC_MSG_ERROR([Unable to link with libavc1394. Check that your have libavc1394 installed and that the version is 0.4.1 or newer])])

# LIBROM1394
AC_CHECK_HEADER([libavc1394/rom1394.h], ,
	[AC_MSG_ERROR([rom1394.h not found, install libavc1394-devel])
])
AC_CHECK_LIB(rom1394, rom1394_get_node_type, ,
	[AC_MSG_ERROR([Unable to link with librom1394. Check that your have librom1394 installed (usually part of libavc1394) and that the version is 0.4.1 or newer])])



AC_CHECK_LIB(ACE, [main])

AC_CHECK_LIB(YARP_OS, [main])

AC_CHECK_LIB(YARP_sig, [main])

AC_CHECK_LIB(YARP_math, [main])





AC_CHECK_LIB(pthread, pthread_create,,
[
	AC_ERROR(You need the pthread library to compile dvgrab)
])

AC_CHECK_HEADERS(libdv/dv1394.h,,
[
	AC_WARN(Capture with dv1394 disabled.)
])
AC_CHECK_HEADERS(libdv/dv.h,,
[
	AC_WARN(libdv headers missing; I make better dv2 AVI files with libdv 0.98 or newer installed.)
])
AC_CHECK_LIB(dv, dv_encode_metadata,,
[
	AC_WARN(libdv missing; I make better dv2 AVI files with libdv 0.98 or newer installed.)
])

AC_CHECK_HEADERS(quicktime/quicktime.h,,
[
	AC_WARN(quicktime headers missing; install libquicktime or quicktime4linux to support Quicktime files.)
])

# add various libs if using quicktime4linux and not libquicktime
AC_CHECK_HEADERS(quicktime/lqt.h,
	[AC_CHECK_LIB(quicktime, quicktime_open, ,
		[AC_WARN(libquicktime missing; install libquicktime or quicktime4linux to support Quicktime files.)]
	)],
[
	AC_CHECK_LIB(png, png_read_image)
	AC_CHECK_LIB(ogg, ogg_stream_pagein)
	AC_CHECK_LIB(vorbis, vorbis_info_clear)
	AC_CHECK_LIB(vorbisenc, vorbis_encode_ctl)
	AC_CHECK_LIB(jpeg, jpeg_read_scanlines)
	AC_CHECK_LIB(a52, a52_init)
	AC_CHECK_LIB(mpeg3, mpeg3demux_read_char_packet)
	AC_CHECK_LIB(quicktime, quicktime_open, ,
		[AC_WARN(libquicktime missing; install libquicktime or quicktime4linux to support Quicktime files.)]
	)
])

AC_CHECK_HEADERS(jpeglib.h,,
[
	AC_WARN(jpeglib headers missing; install jpeglib to save to JPEG files.)
])
AC_CHECK_LIB(jpeg, jpeg_CreateCompress,,
[
	AC_WARN(jpeglib missing; install jpeglib to save to JPEG files.)
])

AC_CHECK_HEADERS(libraw1394/raw1394.h libraw1394/csr.h,,
[
	AC_ERROR(You need raw1394 and csr headers to compile dvgrab)
])

# EFENCE
AC_ARG_WITH(efence,[  --with-efence        Use ElectricFence for debugging support.],
[
	AC_CHECK_LIB(efence,free,,
	[
		AC_ERROR(efence not found)
	])
])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mktime)

AC_OUTPUT(Makefile)
