dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)
AC_INIT(dvgrab.cc)
AM_INIT_AUTOMAKE(dvgrab, 1.5)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_LANG(C++)

dnl
dnl The pkg-config utility (found in pkg-config paquage)
dnl This tool is used to extract info from .la files installed with libtool
dnl Currently it is only useful for gtkmm
dnl
AC_PATH_PROG(PKG_CONFIG, pkg-config)
if test "$PKG_CONFIG" = "" ; then
    AC_MSG_ERROR([*** could not find the pkg-config utility ***
    *** please install the pkg-config package, it is needed for using libgtkmm ***])
fi


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(stdio.h)

PKG_CHECK_MODULES(SIGC, sigc++-1.2)
CXXFLAGS="$CXXFLAGS $SIGC_CFLAGS  -I/usr/lib/sigcx-0.6/include/"
LDFLAGS="$LDFLAGS $SIGC_LIBS"

#PKG_CHECK_MODULES(SIGCX, [sigcx >= 0.6])
#CXXFLAGS="$CXXFLAGS $SIGCX_CFLAGS"
#LDFLAGS="$LDFLAGS $SIGCX_LIBS"

PKG_CHECK_MODULES(GTKMM,
                  [gtkmm-2.0 >= 2.0.0],
                  GTK2FE="yes",
                  GTK2FE="no")
CXXFLAGS="$CXXFLAGS $GTKMM_CFLAGS"
LDFLAGS="$LDFLAGS $GTKMM_LIBS"

CXXFLAGS="$CXXFLAGS -I/usr/include/opencv"

dnl Checks for libraries.
AC_ARG_WITH(libraw-includes, [  --with-libraw-includes=PATH  Path where libraw1394 headers are installed],
[
        if test x"$withval" != x"no" -a x"$withval" != x"yes"; then
                CPPFLAGS="-I$withval $CPPFLAGS"
        fi
])
AC_ARG_WITH(libraw-libs, [  --with-libraw-libs=PATH      Path where libraw1394 library is installed],
[
        if test x"$withval" != x"no" -a x"$withval" != x"yes"; then
                LDFLAGS="-L$withval $LDFLAGS"
        fi
])
AC_CHECK_LIB(raw1394, raw1394_new_handle,,
[
	AC_ERROR(You need libraw1394 0.9 or later to run dvgrab)
])

# LIBAVC1394
AC_CHECK_HEADER([libavc1394/avc1394.h], ,
	[AC_MSG_ERROR([avc1394.h not found, install libavc1394-devel])
])
AC_CHECK_LIB(avc1394, avc1394_vcr_stop, ,
	[AC_MSG_ERROR([Unable to link with libavc1394. Check that your have libavc1394 installed and that the version is 0.4.1 or newer])])

# LIBROM1394
AC_CHECK_HEADER([libavc1394/rom1394.h], ,
	[AC_MSG_ERROR([rom1394.h not found, install libavc1394-devel])
])
AC_CHECK_LIB(rom1394, rom1394_get_node_type, ,
	[AC_MSG_ERROR([Unable to link with librom1394. Check that your have librom1394 installed (usually part of libavc1394) and that the version is 0.4.1 or newer])])


AC_CHECK_LIB(pthread, pthread_create,,
[
	AC_ERROR(You need the pthread library to compile dvgrab)
])

AC_CHECK_HEADERS(libdv/dv1394.h,,
[
	AC_WARN(Capture with dv1394 disabled.)
])
AC_CHECK_HEADERS(libdv/dv.h,,
[
	AC_WARN(libdv headers missing; I make better dv2 AVI files with libdv 0.98 or newer installed.)
])
AC_CHECK_LIB(dv, dv_encode_metadata,,
[
	AC_WARN(libdv missing; I make better dv2 AVI files with libdv 0.98 or newer installed.)
])

AC_CHECK_HEADERS(quicktime/quicktime.h,,
[
	AC_WARN(quicktime headers missing; install libquicktime or quicktime4linux to support Quicktime files.)
])

# add various libs if using quicktime4linux and not libquicktime
AC_CHECK_HEADERS(quicktime/lqt.h,
	[AC_CHECK_LIB(quicktime, quicktime_open, ,
		[AC_WARN(libquicktime missing; install libquicktime or quicktime4linux to support Quicktime files.)]
	)],
[
	AC_CHECK_LIB(png, png_read_image)
	AC_CHECK_LIB(ogg, ogg_stream_pagein)
	AC_CHECK_LIB(vorbis, vorbis_info_clear)
	AC_CHECK_LIB(vorbisenc, vorbis_encode_ctl)
	AC_CHECK_LIB(jpeg, jpeg_read_scanlines)
	AC_CHECK_LIB(a52, a52_init)
	AC_CHECK_LIB(mpeg3, mpeg3demux_read_char_packet)
	AC_CHECK_LIB(quicktime, quicktime_open, ,
		[AC_WARN(libquicktime missing; install libquicktime or quicktime4linux to support Quicktime files.)]
	)
])

AC_CHECK_HEADERS(jpeglib.h,,
[
	AC_WARN(jpeglib headers missing; install jpeglib to save to JPEG files.)
])
AC_CHECK_LIB(jpeg, jpeg_CreateCompress,,
[
	AC_WARN(jpeglib missing; install jpeglib to save to JPEG files.)
])

AC_CHECK_HEADERS(libraw1394/raw1394.h libraw1394/csr.h,,
[
	AC_ERROR(You need raw1394 and csr headers to compile dvgrab)
])


AC_CHECK_LIB(ACE, [main])

AC_CHECK_LIB(YARP_OS, [main])

AC_CHECK_LIB(YARP_sig, [main])

AC_CHECK_LIB(YARP_math, [main])



AC_CHECK_LIB(sigcx-0.6, [main])

AC_CHECK_LIB(sigcx-gtk-0.6, [main])

AC_CHECK_LIB(opencv, [main])

AC_CHECK_LIB(highgui, [main])

dnl
dnl The gtkmm library
dnl

#AC_SUBST(GTKMM_LDFLAGS, [`$PKG_CONFIG --libs gtkmm-2.0`])
#if test "$GTKMM_LDFLAGS" = "" ; then
#    AC_MSG_ERROR([*** could not find pkg-config info for the gtkmm library ***
#*** please check the libgtkmmi-2.0 package is installed or use --with-gtkmm-path=path])
#fi

#AC_SUBST(CPPFLAGS, "$CPPFLAGS `$PKG_CONFIG --cflags-only-I gtkmm-2.0`")

#dnl   verify headers are present
#AC_CHECK_HEADER([gtkmm.h],
#    AC_SUBST(GTKMM_INCLUDE),
#    AC_MSG_ERROR([*** libgtkmm header file not found ***
#*** please verify the libgtkmm-2.0-dev package is installed ***]))




# EFENCE
AC_ARG_WITH(efence,[  --with-efence        Use ElectricFence for debugging support.],
[
	AC_CHECK_LIB(efence,free,,
	[
		AC_ERROR(efence not found)
	])
])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mktime)

AC_OUTPUT(Makefile)
